; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/sis/extr_if_sis.c_sis_read_eeprom.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/sis/extr_if_sis.c_sis_read_eeprom.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sis_softc = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.sis_softc*, i64, i32, i32, i32)* @sis_read_eeprom to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @sis_read_eeprom(%struct.sis_softc* %0, i64 %1, i32 %2, i32 %3, i32 %4) #0 {
  %6 = alloca %struct.sis_softc*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32*, align 8
  store %struct.sis_softc* %0, %struct.sis_softc** %6, align 8
  store i64 %1, i64* %7, align 8
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store i32 %4, i32* %10, align 4
  store i32 0, i32* %12, align 4
  store i32 0, i32* %11, align 4
  br label %14

14:                                               ; preds = %40, %5
  %15 = load i32, i32* %11, align 4
  %16 = load i32, i32* %9, align 4
  %17 = icmp slt i32 %15, %16
  br i1 %17, label %18, label %43

18:                                               ; preds = %14
  %19 = load %struct.sis_softc*, %struct.sis_softc** %6, align 8
  %20 = load i32, i32* %8, align 4
  %21 = load i32, i32* %11, align 4
  %22 = add nsw i32 %20, %21
  %23 = call i32 @sis_eeprom_getword(%struct.sis_softc* %19, i32 %22, i32* %12)
  %24 = load i64, i64* %7, align 8
  %25 = load i32, i32* %11, align 4
  %26 = mul nsw i32 %25, 2
  %27 = sext i32 %26 to i64
  %28 = add nsw i64 %24, %27
  %29 = inttoptr i64 %28 to i32*
  store i32* %29, i32** %13, align 8
  %30 = load i32, i32* %10, align 4
  %31 = icmp ne i32 %30, 0
  br i1 %31, label %32, label %36

32:                                               ; preds = %18
  %33 = load i32, i32* %12, align 4
  %34 = call i32 @ntohs(i32 %33)
  %35 = load i32*, i32** %13, align 8
  store i32 %34, i32* %35, align 4
  br label %39

36:                                               ; preds = %18
  %37 = load i32, i32* %12, align 4
  %38 = load i32*, i32** %13, align 8
  store i32 %37, i32* %38, align 4
  br label %39

39:                                               ; preds = %36, %32
  br label %40

40:                                               ; preds = %39
  %41 = load i32, i32* %11, align 4
  %42 = add nsw i32 %41, 1
  store i32 %42, i32* %11, align 4
  br label %14

43:                                               ; preds = %14
  ret void
}

declare dso_local i32 @sis_eeprom_getword(%struct.sis_softc*, i32, i32*) #1

declare dso_local i32 @ntohs(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
